# HomoDSP

./: JASPAR2026_33_samples.txt  README.md  environment.yml  pyproject.toml  requirements.txt
checkpoints/homodsp_hq_top16_fold0/: Model.best.tar  scaler.pkl  training_config.json
checkpoints/homodsp_hq_top16_fold1/: Model.best.tar  scaler.pkl  training_config.json
checkpoints/homodsp_hq_top16_fold2/: Model.best.tar  scaler.pkl  training_config.json
checkpoints/homodsp_hq_top16_fold3/: Model.best.tar  scaler.pkl  training_config.json
checkpoints/homodsp_hq_top16_fold4/: Model.best.tar  scaler.pkl  training_config.json
config/: inference_config.json
deeppbs/: make_logo.py
deeppbs/_data/: pwms.pickle
deeppbs/nn/: evaluator.py  trainer.py
deeppbs/nn/metrics/: report_metrics.py
deeppbs/nn/utils/: load_data.py
homodsp/: predict_pwm.py  process_complex.py
homodsp/models/: model_v2.py
homodsp/templates/: attach_cif_complex_template_features.py  attach_cif_direct_complex_template_features.py  attach_cif_interface_gnn_features.py  attach_template_features.py  batch_cif_interface_templates.py  build_npz_template_index.py  extract_query_interface_patch.py  inspect_template_npz.py  prepare_real_query_cifs.py  prepare_template_smoke_train.py  process_foldseek_cif_hits.py  retrieve_npz_templates.py  smoke_load_augmented.py  smoke_template_forward.py
